# chatbot

./: CMakeLists.txt  DEBUG_SETUP.md  README.md
src/: chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h  graphnode.cpp  graphnode.h
tests/: test_chatbot.cpp  test_main.cpp
